# myGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/Lua53/: CMakeLists.txt
dependencies/Lua53/src/: i.lua  loslib.c  mt_test.lua  test_table.lua  tt.lua
dependencies/LuaTinker/: CMakeLists.txt  lua_tinker.cpp  lua_tinker.h
dependencies/tolua/: CMakeLists.txt
include/: CameraOption.h  Character.h  DebugInfo.h  GameClient.h  SkyBox.h  config.h  gamescene.h
myEngine/: CMakeLists.txt
myEngine/editor/: CMakeLists.txt
myEngine/editor/scripts/: build.bat  build_macox.sh  build_macox_cmake.sh  build_win_cmake.bat
myEngine/editor/src/: CameraOption.cpp  CameraOption.h  Character.cpp  Character.h  DebugInfo.cpp  GameClient.cpp  GameClient.h  fs_imgui_image.bin.h  fs_ocornut_imgui.bin.h  imguiContext.cpp  imguiContext.h  imgui_impl_win32.cpp  imgui_impl_win32.h  main.cpp  roboto_regular.ttf.h  vs_imgui_image.bin.h  vs_ocornut_imgui.bin.h
myEngine/editor/src/mac/: AppDelegate.h  AppDelegate.mm  Info.plist  main.mm
myEngine/editor/src/mac/Base.lproj/: MainMenu.xib
myEngine/editor/src/win32/: main.cpp
myEngine/include/: Camera.h  Engine.h  EulerAngles.h  HelperFunc.h  Material.cpp  Material.h  MathUtil.h  Matrix4.h  Matrix4x3.h  Mesh.h  Model.h  Quaternion.h  RenderManager.h  Renderer.h  RotationMatrix.h  Shader.h  Singleton.h  SkyBox.h  StringDef.h  Vector3.h  gltools.h  myEngineCore.h
myEngine/lib/assimp/win32/lib/: assimp.lib
myEngine/lib/assimp/win32/lib/Debug/: assimp-vc140-mt.exp
myEngine/lib/freetype-2.9.1/: CMakeLists.txt
myEngine/lib/glew/win32/: readme.txt
myEngine/lib/imgui/: CMakeLists.txt
myEngine/lib/tinyobjloader/win32/lib/: tinyobjloader.lib
myEngine/lib/tinyxml2/: CMakeLists.txt
myEngine/res/: engineConfig.xml  materialConfig.xml
myEngine/res/shader/: bgfx_shader.sh  color.vs  common.fs  common.ps  common.vs  common_fs.sc  common_vs.sc  compileShader.bat  diffuse.def  diffuse.fs  diffuse.vs  fire.fs  pbr_gltf.def  pbr_gltf.fs  pbr_gltf.vs  pbr_gltf_fs.sc  pbr_gltf_varying.def.sc  pbr_gltf_vs.sc  scenecommon.fs  scenecommon.vs  shaderConfig.xml  shaderlib.sh  simple_fs.sc  simple_varying.def.sc  simple_vs.sc  skybox.fs  skybox.vs  test.fs  test.vs  texture.fs  texture.vs  varying.def  varying.def.bk.sc  whiteblack.fs  whiteblack.vs
myEngine/src/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  EulerAngles.cpp  FbxSdkHelper.cpp  FbxSdkHelper.h  HelperFunc.cpp  HelperFunc.h  Material.cpp  Material.h  MathUtil.cpp  MathUtil.h  Matrix4.cpp  Matrix4.h  Matrix4x3.cpp  Model.cpp  Model.h  Node.cpp  Node.h  ObjLoader.cpp  Quaternion.cpp  Quaternion.h  RenderObject.h  Renderer.cpp  Renderer.h  RotationMatrix.cpp  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Singleton.h  SkyBox.cpp  SkyBox.h  StringDef.cpp  StringDef.h  Vector3.cpp  Vector3.h  (+11 more)
myEngine/src/GUI/: test_shader_object.cpp
myEngine/src/anim/: Animation.cpp  Animation.h
myEngine/src/base/: HelperFunc.cpp  HelperFunc.h  Singleton.h
myEngine/src/core/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  SkyBox.cpp  config.cpp  config.h
myEngine/src/math/: EulerAngles.cpp  EulerAngles.h  MathUtil.cpp  MathUtil.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  RotationMatrix.cpp  RotationMatrix.h  Vector3.cpp  Vector3.h
myEngine/src/renderer/: Material.cpp  Material.h  RenderObject.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  gltools.cpp  gltools.h  renderObject.cpp
myEngine/src/ui/: test_shader_object.cpp
res/: commonConfig.xml
res/luafiles/: dofile.lua  luagamemgr.lua
res/luafiles/ui/: luauimgr.lua
res/models/: modelConfig.xml
res/models/CesiumMan/: CesiumMan.gltf
res/models/CesiumMilkTruck/: CesiumMilkTruck.gltf
res/models/DamagedHelmet/: DamagedHelmet.gltf
res/models/character1/: Dukemon-Final-2.mtl
res/models/rock/: rock.mtl
res/scenes/: sceneConfig.xml
res/scenes/character1/: Dukemon-Final-2.mtl
res/scenes/scene1/: Hram_1.mtl
res/scenes/scene2/: House.c4d
scriptAndTools/: build_cmake_ios.sh  build_cmake_win.bat  build_ios.sh  build_mac.sh  build_win.bat
scriptAndTools/cmake/: ios.cmake
scriptAndTools/protoc/: build.bat
scriptAndTools/protoc/my_protoc/: message.protoc
scriptAndTools/tolua/: build.bat  build.cmd  build.sh  luaClientPort.cpp  tolua++
scriptAndTools/tolua/pkgs/: Character.pkg  gamescene.pkg  myGame.pkg
src/: CMakeLists.txt
src/gameSrc/: CMakeLists.txt  CameraOption.cpp  CameraOption.h  Character.cpp  Character.h  DebugInfo.cpp  DebugInfo.h  GameClient.cpp  GameClient.h  SkyBox.cpp  common.vs  config.cpp  gamescene.cpp  gamescene.h  luaClientPort.cpp  luaClientPort.h
src/platform/android/: CMakeLists.txt
src/platform/android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
src/platform/android/app/src/main/: AndroidManifest.xml
src/platform/android/app/src/main/cpp/: android_fopen.h  entry.cpp
src/platform/android/gradle/wrapper/: gradle-wrapper.properties
src/platform/ios/: AppDelegate.h  AppDelegate.m  CMakeCache.txt  CMakeLists.txt  CppInterface.h  CppInterface.mm  Main.storyboard  ViewController.m
src/platform/ios/cmake/: ios.cmake
src/platform/mac/: CMakeLists.txt  entry_osx.mm  main.cpp
src/platform/win/: CMakeLists.txt  MyTriangle.cpp  main.cpp
