add_subdirectory(Lua53)
add_subdirectory(LuaTinker)

# add_subdirectory(process)
# add_subdirectory(zlib)
# add_subdirectory(g3dlite)
# add_subdirectory(recastnavigation)
# add_subdirectory(fmt)
# add_subdirectory(SFMT)
# add_subdirectory(utf8cpp)
# add_subdirectory(valgrind)
# add_subdirectory(openssl)
# add_subdirectory(jemalloc)
